<resources>
    <string name="app_name">Taller02</string>
    <string name="desc_logo">Logo</string>
    <string name="author">Sebastian Vera</string>
    <string name="home_act_msg">Start a new journey with this app and  let you know a new way to see the world</string>
    <string name="start_msg">Start</string>
    <string name="register_msg">Register</string>
    <string name="account_icn_dec">Account</string>
    <string name="password_inc_desc">Password</string>
    <string name="login_message">The journey is about to beginning, log in please</string>
    <string name="login_msg">Log In</string>
    <string name="forgot_password_msg">Forgot your password?</string>
    <string name="google_login">Start with Google</string>
    <string name="no_account_msg">Have not account?</string>
    <string name="register_message">Set your register info</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="phone_hint">Phone</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="conditions_hint">Agree terms and conditions.</string>
    <string name="recovery_msg">We will send and recovery password email</string>
    <string name="recovery_hint">Recovery</string>
    <string name="edit_hint">Edit</string>
    <string name="home_hint">Home Button</string>
    <string name="cart_hint">Cart button</string>
    <string name="store_link_txt">Go to Store</string>
    <string name="home_content">This is a learning application testing some features of android astudio</string>
    <string name="home_title">Redundant View Text Title For Taller 2 Application</string>
    <string name="store_title">Products</string>
    <string name="hint_product_img">Product Image</string>
    <string name="price_hint">Price:</string>
    <string name="category_hint">Category:</string>
    <string name="select_hint">arrow</string>
    <string name="stock_hint">Stock:</string>
    <string name="quantity_hint">Quantity:</string>
    <string name="add_cart">Add to Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal:</string>
    <string name="unit_price">Unit Price:</string>
    <string name="remove">Remove</string>
    <string name="buy">Buy</string>
    <string name="total_items">Total Items</string>
    <string name="total_price">Total Price:</string>
</resources>