<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.SessionNavigation">

    <LinearLayout
        android:id="@+id/cart_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_style"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="35dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/my_cart"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="900"
            android:textSize="30sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/cart_header"
        tools:listitem="@layout/card_cart_item" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/total_price"
                    android:textColor="@color/black"
                    android:textFontWeight="900" />

                <TextView
                    android:id="@+id/cart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/total_items"
                    android:textColor="@color/black"
                    android:textFontWeight="900" />
                <TextView
                    android:id="@+id/cart_total_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button.Orange"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:textFontWeight="900"
            android:text="@string/buy" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>