<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_style"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2">

                <LinearLayout
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/unit_price"
                        android:textColor="@color/black"
                        android:textFontWeight="900" />
                    <TextView
                        android:id="@+id/prod_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/subtotal"
                        android:textColor="@color/black"
                        android:textFontWeight="900" />

                    <TextView
                        android:id="@+id/cart_item_subtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cart_item_remove"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_rowSpan="2"
                    android:layout_gravity="fill_vertical"
                    style="@style/Button.Orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textFontWeight="900"
                    android:text="@string/remove" />
                <LinearLayout
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/quantity_hint"
                        android:textColor="@color/black"
                        android:textFontWeight="900" />
                    <TextView
                        android:id="@+id/cart_item_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </LinearLayout>
        </GridLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>